fix spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -20,9 +20,13 @@
   margin: 16px;
 }
 
+.soc-med-container {
+  padding-top: 24px;
+}
+
 #soc-med {
-  margin: 16px 0;
   display: flex;
+  flex-wrap: wrap;
   flex: 1;
   align-items: center;
   flex-basis: 64px;
@@ -36,11 +40,7 @@
 }
 
 .soc-med-row {
-  padding-right: 24px;
-}
-
-.soc-med-row:last-of-type {
-  padding-right: 0;
+  padding: 16px 8px;
 }
 
 footer {
@@ -85,7 +85,7 @@ footer {
 }
 
 .site-block {
-  clear: both;
+  display: flex;
 }
 
 .stores {
@@ -110,7 +110,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 120px;
+  min-height: 120px;
   font-weight: bold;
 }
 
@@ -177,6 +177,8 @@ footer {
 .edu-image-container {
   height: 100px;
   width: 100px;
+  min-height: 100px;
+  min-width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
